Progress towards handling a whole filesystem