@@ -2,17 +2,17 @@ package dev.alexhstone.calculator;
 
 import dev.alexhstone.exception.InvalidFileHashPathException;
 import dev.alexhstone.model.FileHashResult;
-import dev.alexhstone.model.FolderHierarchy;
+import lombok.extern.slf4j.Slf4j;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.function.Consumer;
 import java.util.stream.Stream;
 
+@Slf4j
 public class RecursiveFileHashCalculator {
 
     private final FileHashResultCalculator fileHashResultCalculator;
@@ -22,28 +22,30 @@ public class RecursiveFileHashCalculator {
         fileHashResultCalculator = new FileHashResultCalculator(hashCalculator);
     }
 
-    public FolderHierarchy process(Path absolutePathToWorkingDirectory) {
-        String workingDirectoryPathString = absolutePathToWorkingDirectory.toFile().getAbsolutePath();
-        if (!Files.exists(absolutePathToWorkingDirectory)) {
-            String message = "The supplied path [" + absolutePathToWorkingDirectory + "] does not exist, expected something of the form " +
+    public void process(Path workingDirectoryPath, Consumer<FileHashResult> consumer) {
+        String workingDirectoryPathString = workingDirectoryPath.toFile().getAbsolutePath();
+        if (!Files.exists(workingDirectoryPath)) {
+            String message = "The supplied path [" + workingDirectoryPath + "] does not exist, expected something of the form " +
                     "C:\\directory. The supplied path was resolved to the absolute path [" + workingDirectoryPathString + "]";
             throw new InvalidFileHashPathException(message);
         }
-        Stream<Path> pathToWalk = walk(absolutePathToWorkingDirectory);
-        List<FileHashResult> fileHashResults = pathToWalk.parallel()
+        Stream<Path> pathToWalk = walk(workingDirectoryPath);
+        List<File> files = pathToWalk
+                .parallel()
                 .map(Path::toFile)
                 .filter(File::isFile)
-                .map((File file) ->
-                        fileHashResultCalculator
-                                .process(absolutePathToWorkingDirectory, file))
-                .collect(Collectors.toList());
+                .toList();
+        log.info("About to calculate hashes for {} files under the working directory [{}]",
+                files.size(), workingDirectoryPathString);
 
-        fileHashResults.sort(Comparator.comparing(FileHashResult::getAbsolutePathToFile));
-
-        return FolderHierarchy.builder()
-                .absolutePathToWorkingDirectory(workingDirectoryPathString)
-                .fileHashResults(fileHashResults)
-                .build();
+        files.parallelStream()
+                .forEach(file -> {
+                    FileHashResult hashResult =
+                            fileHashResultCalculator.process(workingDirectoryPath, file);
+                    consumer.accept(hashResult);
+                });
+        log.info("Completed calculating hashes for {} files under the working directory [{}]",
+                files.size(), workingDirectoryPathString);
     }
 
     private Stream<Path> walk(Path path) {
